tests/ui/include-macros/parent_dir.stderr
error: couldn't read `$DIR/include-macros/file.txt`: $FILE_NOT_FOUND_MSG
  --> $DIR/parent_dir.rs:4:13
   |
LL |     let _ = include_str!("include-macros/file.txt");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a file with the same name in a different directory
   |
LL -     let _ = include_str!("include-macros/file.txt");
LL +     let _ = include_str!("file.txt");
   |

error: couldn't read `$DIR/hello.rs`: $FILE_NOT_FOUND_MSG
  --> $DIR/parent_dir.rs:6:13
   |
LL |     let _ = include_str!("hello.rs");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a file with the same name in a different directory
   |
LL |     let _ = include_str!("../hello.rs");
   |                           +++

error: couldn't read `$DIR/../../data.bin`: $FILE_NOT_FOUND_MSG
  --> $DIR/parent_dir.rs:8:13
   |
LL |     let _ = include_bytes!("../../data.bin");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a file with the same name in a different directory
   |
LL -     let _ = include_bytes!("../../data.bin");
LL +     let _ = include_bytes!("data.bin");
   |

error: couldn't read `$DIR/tests/ui/include-macros/file.txt`: $FILE_NOT_FOUND_MSG
  --> $DIR/parent_dir.rs:10:13
   |
LL |     let _ = include_str!("tests/ui/include-macros/file.txt");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a file with the same name in a different directory
   |
LL -     let _ = include_str!("tests/ui/include-macros/file.txt");
LL +     let _ = include_str!("file.txt");
   |

error: aborting due to 4 previous errors

